@@ -311,7 +311,8 @@ GEXTEND Gram
       | "**" -> !@loc, IntroForthcoming false ]]
   ;
   simple_intropattern:
-    [ [ pat = simple_intropattern_closed; l = LIST0 ["/"; c = constr -> c] ->
+    [ [ pat = simple_intropattern_closed;
+        l = LIST0 ["%"; c = operconstr LEVEL "0" -> c] ->
           let loc0,pat = pat in
           let f c pat =
             let loc = Loc.merge loc0 (Constrexpr_ops.constr_loc c) in
